# plasticome-enzymes

./: .env.example  .gitignore  README.md  pyproject.toml
dump/: plasticome-psql-v1.sql.lzo
plasticome-enzymes/models/: enzyme.py
plasticome-enzymes/services/: enzyme.py
plasticome_enzymes/controllers/: enzyme_controller.py
plasticome_enzymes/models/: enzyme_model.py  metadata_enzyme_model.py
plasticome_enzymes/routes/: app.py
plasticome_enzymes/services/: enzyme_service.py
plasticome_metadata/controllers/: enzyme_controller.py  plastic_controller.py  plastic_enzyme_controller.py  user_controller.py
plasticome_metadata/models/: config.py  metadata_enzyme_model.py  user_model.py
plasticome_metadata/routes/: app.py
plasticome_metadata/services/: enzyme_plastic_service.py  enzyme_service.py  plastic_service.py  user_service.py
